In UpdateEntity new Function ant spectator and adventure mode for players owner of Kaia and improved code. news translations. In MixinEntityLivingBase fixed bugs and check if player is in eternal dead list. In KaiaUtil improved code and new function eternal dead and bugs fixed. In Kaia improved code and player invulnerable new button for function eternal dead. New Config file for manager list of eternal dead of players. New Command for manager Config File. In build.gradle removed mixin booter

--- a/src/main/resources/assets/omnipotent/lang/en_us.lang
+++ b/src/main/resources/assets/omnipotent/lang/en_us.lang
@@ -48,3 +48,7 @@ container.kaia=Kaia Backpack
 container.kaia.stackCount=Amount
 #configs
 config.playerscantrespawn=players that can't respawn
+#commands
+command.sucess=Command sucess
+command.omni.error=The sintaxe of the command is wrong
+command.omni.notfound=Command not found
